# acid_techno

./: nav2_params.yaml  package.xml  setup.py
acid_techno/: corrected_odom_node.py  grid_model.py  gui_node.py  gui_node_new.py  heater_test.py  map_comparison.py  map_generation.py  navigation_node.py  path_find_node.py  read_acidity_node.py  temperature_node.py
launch/: acid_techno.launch.py
