<?xml version="1.0"?>
<package format="3">
  <name>acid_techno</name>
  <version>0.0.1</version>
  <description>DTAS to map out ocean acidity levels</description>
  <maintainer email="a.biesevicius@student.tue.nl">Arnas Biesevicius</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
